KeyPaths: Correctly instantiate offsets for final stored properties in NSObject subclasses.

We need to use the ivar offset variables in this case, since the Swift field offset vector doesn't pick up the adjusted offsets from the ObjC runtime. Fixes SR-5036 | rdar://problem/32488871.